force-app/main/default/objects/Lead/fields/Numero_Funcionarios__c.field-meta.xml
<CustomField>
    <fullName>Numero_Funcionarios__c</fullName>
    <label>Número de Funcionários</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>