force-app/main/default/objects/Lead/fields/Origem_Detalhada__c.field-meta.xml
<CustomField>
    <fullName>Origem_Detalhada__c</fullName>
    <label>Origem Detalhada</label>
    <length>200</length>
    <type>Text</type>
</CustomField>