force-app/main/default/objects/Lead/validationRules/CNPJ_Regex.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJ_Regex</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(CNPJ__c)),
  NOT(REGEX(CNPJ__c, &quot;^[0-9]{2}\\.[0-9]{3}\\.[0-9]{3}\\/[0-9]{4}\\-[0-9]{2}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>CNPJ__c</errorDisplayField>
    <errorMessage>O CNPJ deve estar no formato XX.XXX.XXX/XXXX-XX.</errorMessage>
</ValidationRule>