force-app/main/default/objects/Lead/validationRules/Verificando_CNPJ.validationRule-meta.xml
<ValidationRule>
    <fullName>Verificando_CNPJ</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(CNPJ__c)),
  NOT(REGEX(CNPJ__c, &quot;^[0-9]{2}\\.[0-9]{3}\\.[0-9]{3}\\/[0-9]{4}\\-[0-9]{2}$&quot;))
)</errorConditionFormula>
    <errorMessage>O CNPJ deve estar no formato XX.XXX.XXX/XXXX-XX (ex.: 00.000.000/0001-00)</errorMessage>
</ValidationRule>