force-app/main/default/objects/Lead/listViews/Inside_Sales_Geral_Lead.listView-meta.xml
<ListView>
    <fullName>Inside_Sales_Geral_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Inside Sales Geral</label>
    <queue>Inside_Sales_Geral</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>