force-app/main/default/objects/Lead/listViews/Inside_Sales_Tech_Lead.listView-meta.xml
<ListView>
    <fullName>Inside_Sales_Tech_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Inside Sales Tech</label>
    <queue>Inside_Sales_Tech</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>